feat: a little less broken swagger
